# bore-model

./: README.md  Taskfile.yml  bore.html  bore.ttl  model.html  model.ttl  pyproject.toml
.github/workflows/: publish.yaml
scripts/: make_html.py  make_readme.py
